@@ -159,6 +159,62 @@ void gridprojectallfaces_( void )
 #endif
 }
 
+
+void gridtestcadparameters_( void )
+{
+  int global, local; 
+  int nodes[3], edge, edgeId, face, faceId;
+  double oldXYZ[3], oldT, oldUV[2];
+  double newXYZ[3], newT, newUV[2];
+  double dXYZ[3], dist, dT, dUV;
+  double tol = 1e-13;
+  AdjIterator it;
+
+  for(global=0;global<gridGlobalNNode(grid);global++) {
+    local = gridGlobal2Local(grid,global);
+    if (EMPTY!=global) {
+      for ( it = adjFirst(gridEdgeAdj(grid),local); 
+	    adjValid(it); 
+	    it = adjNext(it) ){
+	edge = adjItem(it);
+	gridEdge(grid, edge, nodes, &edgeId);
+	gridNodeXYZ(grid,local,oldXYZ);
+	gridNodeT(grid,local,edgeId,&oldT);
+	gridProjectNodeToEdge(grid, local, edgeId );
+	gridNodeXYZ(grid,local,newXYZ);
+	gridNodeT(grid,local,edgeId,&newT);
+	gridSubtractVector(newXYZ,oldXYZ,dXYZ);
+	dist = gridVectorLength(dXYZ);
+	dT = ABS(newT-oldT);
+	if (dist>tol || dT > tol)
+	  printf("%03d global %d local %d edge %d dXYZ %e dT %e\n",
+		 gridPartId(grid), global, local, edgeId,
+		 dist, dT);
+      }
+      for ( it = adjFirst(gridFaceAdj(grid),local); 
+	    adjValid(it); 
+	    it = adjNext(it) ){
+	face = adjItem(it);
+	gridFace(grid, face, nodes, &faceId);
+	gridNodeXYZ(grid,local,oldXYZ);
+	gridNodeUV(grid,local,faceId,oldUV);
+	gridProjectNodeToFace(grid, local, faceId );
+	gridNodeXYZ(grid,local,newXYZ);
+	gridNodeUV(grid,local,faceId,newUV);
+	gridSubtractVector(newXYZ,oldXYZ,dXYZ);
+	dist = gridVectorLength(dXYZ);
+	dUV = sqrt( (newUV[0]-oldUV[0])*(newUV[0]-oldUV[0]) +
+		    (newUV[1]-oldUV[1])*(newUV[1]-oldUV[1]) );
+	if (dist>tol || dUV > tol)
+	  printf("%03d global %d local %d face %d dXYZ %e dUV %e\n",
+		 gridPartId(grid), global, local, faceId,
+		 dist, dUV);
+      }
+    }
+  }
+
+}
+
 void gridminar_( double *aspectratio )
 {
   *aspectratio = gridMinAR( grid );
